# DD

./: .gitignore  CellType-Agent_Critical_Analysis.md  CellType-Agent_Deep_Research_Analysis.md  CellType-Agent_Enhancement_Plan.docx  CellType-Agent_Enhancement_Plan.md  Dockerfile  Dockerfile.gpu  Final_Implementation_Review.md  Implementation_Test_Report.md  Production_Readiness_Report.md  README.md  README_PHASE1.md  README_PHASE2.md  README_PHASE3.md  demo_cli.py  docker-compose.yml  prompt.txt  pyproject.toml  requirements-gpu.txt  requirements-phase1.txt  requirements-phase2.txt  requirements-phase3.txt  requirements.txt
deploy/: init.sql  prometheus.yml
deploy/grafana/dashboards/: dashboards.yml
deploy/grafana/datasources/: datasources.yml
src/ct/: __main__.py
src/ct/admet/: __init__.py  endpoints.py  predictor.py
src/ct/agent/: __init__.py  runner.py
src/ct/agents/: __init__.py  base_agent.py  critic_agent.py  orchestrator.py  specialist_agents.py
src/ct/api/: __init__.py  main.py
src/ct/campaign/: __init__.py  dmta.py
src/ct/data/: __init__.py  drkg_downloader.py  sample_data.py
src/ct/generative/: __init__.py  boltzgen_optimizer.py  design_pipeline.py  esm3_client.py
src/ct/gpu/: __init__.py  boltz2_service.py  diffdock_service.py  resource_manager.py
src/ct/gpu_infrastructure/: __init__.py  batch_processor.py  boltz2_optimizer.py  resource_manager.py
src/ct/knowledge_graph/: __init__.py  drkg_loader.py  graphrag_queries.py  neo4j_client.py  text_to_cypher.py
src/ct/local_llm/: __init__.py  hybrid_router.py  local_client.py  lora_trainer.py
src/ct/memory/: __init__.py  vector_memory.py
src/ct/models/: __init__.py  llm.py
src/ct/monitoring/: __init__.py  health.py  metrics.py
src/ct/rlef/: __init__.py  feedback_processor.py  preference_optimizer.py  rlef_trainer.py
src/ct/security/: __init__.py  api_keys.py  auth.py  secrets.py
src/ct/session_logging/: __init__.py  feedback_collector.py  logger.py  trace_store.py
src/ct/structure_io/: __init__.py  fasta_handler.py  h5ad_handler.py  pdb_handler.py
src/ct/testing/: performance.py
src/ct/tools/: __init__.py  base.py  phase1_tools.py  phase2_tools.py  phase3_tools.py  registry.py  structure_io_tools.py
src/ct/utils/: __init__.py  error_handling.py
tests/: __init__.py  conftest.py  test_integration.py  test_phase1.py  test_phase2.py  test_phase3.py
(+2 files in other folders)
